--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cTranslator C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(cTranslator main.c c_encapsulation_defs.c c_encapsulation_defs.h)
+add_executable(cTranslator main.c c_encapsulation_defs.c c_encapsulation_defs.h  c_inheritance_defs.c c_inheritance_defs.h)
